Improvised Data collection and Codes for Training and Testing

--- a/Latest Project (Human Action Detection)/Data Preprocessing.ipynb
+++ b/Latest Project (Human Action Detection)/Data Preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,67 @@
       "Action 'Crunching': 30/30 sequences available.\n",
       "Action 'Alternate Toe Touch': 30/30 sequences available.\n",
       "Action 'Jumping Jacks': 30/30 sequences available.\n",
-      "Action 'Right Shot': 30/30 sequences available.\n",
+      "Action 'Right Shot': 0/30 sequences available.\n",
+      "Collecting sequence 1 for 'Right Shot'...\n",
+      "Sequence 1 saved.\n",
+      "Collecting sequence 2 for 'Right Shot'...\n",
+      "Sequence 2 saved.\n",
+      "Collecting sequence 3 for 'Right Shot'...\n",
+      "Sequence 3 saved.\n",
+      "Collecting sequence 4 for 'Right Shot'...\n",
+      "Sequence 4 saved.\n",
+      "Collecting sequence 5 for 'Right Shot'...\n",
+      "Sequence 5 saved.\n",
+      "Collecting sequence 6 for 'Right Shot'...\n",
+      "Sequence 6 saved.\n",
+      "Collecting sequence 7 for 'Right Shot'...\n",
+      "Sequence 7 saved.\n",
+      "Collecting sequence 8 for 'Right Shot'...\n",
+      "Sequence 8 saved.\n",
+      "Collecting sequence 9 for 'Right Shot'...\n",
+      "Sequence 9 saved.\n",
+      "Collecting sequence 10 for 'Right Shot'...\n",
+      "Sequence 10 saved.\n",
+      "Collecting sequence 11 for 'Right Shot'...\n",
+      "Sequence 11 saved.\n",
+      "Collecting sequence 12 for 'Right Shot'...\n",
+      "Sequence 12 saved.\n",
+      "Collecting sequence 13 for 'Right Shot'...\n",
+      "Sequence 13 saved.\n",
+      "Collecting sequence 14 for 'Right Shot'...\n",
+      "Sequence 14 saved.\n",
+      "Collecting sequence 15 for 'Right Shot'...\n",
+      "Sequence 15 saved.\n",
+      "Collecting sequence 16 for 'Right Shot'...\n",
+      "Sequence 16 saved.\n",
+      "Collecting sequence 17 for 'Right Shot'...\n",
+      "Sequence 17 saved.\n",
+      "Collecting sequence 18 for 'Right Shot'...\n",
+      "Sequence 18 saved.\n",
+      "Collecting sequence 19 for 'Right Shot'...\n",
+      "Sequence 19 saved.\n",
+      "Collecting sequence 20 for 'Right Shot'...\n",
+      "Sequence 20 saved.\n",
+      "Collecting sequence 21 for 'Right Shot'...\n",
+      "Sequence 21 saved.\n",
+      "Collecting sequence 22 for 'Right Shot'...\n",
+      "Sequence 22 saved.\n",
+      "Collecting sequence 23 for 'Right Shot'...\n",
+      "Sequence 23 saved.\n",
+      "Collecting sequence 24 for 'Right Shot'...\n",
+      "Sequence 24 saved.\n",
+      "Collecting sequence 25 for 'Right Shot'...\n",
+      "Sequence 25 saved.\n",
+      "Collecting sequence 26 for 'Right Shot'...\n",
+      "Sequence 26 saved.\n",
+      "Collecting sequence 27 for 'Right Shot'...\n",
+      "Sequence 27 saved.\n",
+      "Collecting sequence 28 for 'Right Shot'...\n",
+      "Sequence 28 saved.\n",
+      "Collecting sequence 29 for 'Right Shot'...\n",
+      "Sequence 29 saved.\n",
+      "Collecting sequence 30 for 'Right Shot'...\n",
+      "Sequence 30 saved.\n",
       "Action 'Left Shot': 30/30 sequences available.\n",
       "All resources released. Exiting...\n"
      ]
@@ -214,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
